# signalpro-market-intel

./: .gitignore  Dockerfile  README.md  pyproject.toml
knowledge/: user_preference.txt
src/signalpro_market_intel/: crew.py  discord_bot.py  main.py  models.py  telegram_bot.py  webhook.py
src/signalpro_market_intel/config/: agents.yaml  tasks.yaml
src/signalpro_market_intel/tools/: custom_tool.py
